1.Compiler/1.3.2conditional_expressions/y.output
Terminaux inutilisés dans la grammaire

   tCOMMENT


État 15 conflits: 1 décalage/réduction
État 91 conflits: 5 décalage/réduction
État 92 conflits: 5 décalage/réduction
État 93 conflits: 5 décalage/réduction
État 94 conflits: 5 décalage/réduction
État 95 conflits: 9 décalage/réduction
État 96 conflits: 9 décalage/réduction
État 97 conflits: 9 décalage/réduction
État 98 conflits: 9 décalage/réduction
État 99 conflits: 9 décalage/réduction


Grammaire

    0 $accept: entry_point $end

    1 entry_point: MainFunction

    2 MainFunction: tMAIN tPARO Args tPARF BodyFunction
    3             | tMAIN tPARO tPARF BodyFunction

    4 $@1: %empty

    5 BodyFunction: tACCO $@1 InBody tACCF

    6 $@2: %empty

    7 Body: tACCO $@2 Instructions tACCF

    8 InBody: Declarations Instructions
    9       | Declarations
   10       | Instructions

   11 Declarations: Declaration Declarations
   12             | Declaration

   13 Declaration: Type ListDecs tPV
   14            | Constante

   15 ListDecs: ListDec tVIRGULE ListDecs
   16         | ListDec

   17 ListDec: tID tEQU Exp
   18        | tID

   19 Constante: tCONST Type ListConstDecs tPV

   20 ListConstDecs: ListConstDec tVIRGULE ListConstDecs
   21              | ListConstDec

   22 ListConstDec: tID tEQU Exp

   23 Affectation: tID tEQU Exp tPV

   24 Instructions: Instruction Instructions
   25             | Instruction

   26 Instruction: Affectation
   27            | Print
   28            | IfElse
   29            | While

   30 $@3: %empty

   31 Print: tPRINTF tPARO tID $@3 tPARF tPV

   32 ListIDs: tID tVIRGULE ListIDs
   33        | tID

   34 Args: Arg tVIRGULE Args
   35     | Arg

   36 Arg: Type ListIDs

   37 Type: tINT

   38 Exp: Exp tPLUS Exp
   39    | Exp tMINUS Exp
   40    | Exp tDIV Exp
   41    | Exp tMUL Exp
   42    | Exp tCOMP Exp
   43    | Exp tINF Exp
   44    | Exp tSUP Exp
   45    | Exp tINFE Exp
   46    | Exp tSUPE Exp
   47    | tNB
   48    | tID
   49    | tPARO Exp tPARF

   50 If: tIF tPARO Exp tPARF

   51 IfElse: If

   52 $@4: %empty

   53 IfElse: If tELSE $@4 Body

   54 $@5: %empty

   55 $@6: %empty

   56 While: tWHILE $@5 tPARO Exp tPARF $@6 Body


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tCONST (258) 19
tINT (259) 37
tMAIN (260) 2 3
tPRINTF (261) 31
tIF (262) 50
tELSE (263) 53
tWHILE (264) 56
tMUL (265) 41
tPLUS (266) 38
tMINUS (267) 39
tDIV (268) 40
tEQU (269) 17 22 23
tCOMP (270) 42
tINF (271) 43
tSUP (272) 44
tINFE (273) 45
tSUPE (274) 46
tPARO (275) 2 3 31 49 50 56
tPARF (276) 2 3 31 49 50 56
tACCO (277) 5 7
tACCF (278) 5 7
tVIRGULE (279) 15 20 32 34
tPV (280) 13 19 23 31
tNB (281) 47
tID (282) 17 18 22 23 31 32 33 48
tCOMMENT (283)
tNO_ELSE (284)


Non-terminaux, suivis des règles où ils apparaissent

$accept (30)
    à gauche: 0
entry_point (31)
    à gauche: 1, à droite: 0
MainFunction (32)
    à gauche: 2 3, à droite: 1
BodyFunction (33)
    à gauche: 5, à droite: 2 3
$@1 (34)
    à gauche: 4, à droite: 5
Body (35)
    à gauche: 7, à droite: 53 56
$@2 (36)
    à gauche: 6, à droite: 7
InBody (37)
    à gauche: 8 9 10, à droite: 5
Declarations (38)
    à gauche: 11 12, à droite: 8 9 11
Declaration (39)
    à gauche: 13 14, à droite: 11 12
ListDecs (40)
    à gauche: 15 16, à droite: 13 15
ListDec (41)
    à gauche: 17 18, à droite: 15 16
Constante (42)
    à gauche: 19, à droite: 14
ListConstDecs (43)
    à gauche: 20 21, à droite: 19 20
ListConstDec (44)
    à gauche: 22, à droite: 20 21
Affectation (45)
    à gauche: 23, à droite: 26
Instructions (46)
    à gauche: 24 25, à droite: 7 8 10 24
Instruction (47)
    à gauche: 26 27 28 29, à droite: 24 25
Print (48)
    à gauche: 31, à droite: 27
$@3 (49)
    à gauche: 30, à droite: 31
ListIDs (50)
    à gauche: 32 33, à droite: 32 36
Args (51)
    à gauche: 34 35, à droite: 2 34
Arg (52)
    à gauche: 36, à droite: 34 35
Type (53)
    à gauche: 37, à droite: 13 19 36
Exp (54)
    à gauche: 38 39 40 41 42 43 44 45 46 47 48 49, à droite: 17 22
    23 38 39 40 41 42 43 44 45 46 49 50 56
If (55)
    à gauche: 50, à droite: 51 53
IfElse (56)
    à gauche: 51 53, à droite: 28
$@4 (57)
    à gauche: 52, à droite: 53
While (58)
    à gauche: 56, à droite: 29
$@5 (59)
    à gauche: 54, à droite: 56
$@6 (60)
    à gauche: 55, à droite: 56


État 0

    0 $accept: . entry_point $end

    tMAIN  décalage et aller à l'état 1

    entry_point   aller à l'état 2
    MainFunction  aller à l'état 3


État 1

    2 MainFunction: tMAIN . tPARO Args tPARF BodyFunction
    3             | tMAIN . tPARO tPARF BodyFunction

    tPARO  décalage et aller à l'état 4


État 2

    0 $accept: entry_point . $end

    $end  décalage et aller à l'état 5


État 3

    1 entry_point: MainFunction .

    $défaut  réduction par utilisation de la règle 1 (entry_point)


État 4

    2 MainFunction: tMAIN tPARO . Args tPARF BodyFunction
    3             | tMAIN tPARO . tPARF BodyFunction

    tINT   décalage et aller à l'état 6
    tPARF  décalage et aller à l'état 7

    Args  aller à l'état 8
    Arg   aller à l'état 9
    Type  aller à l'état 10


État 5

    0 $accept: entry_point $end .

    $défaut  accepter


État 6

   37 Type: tINT .

    $défaut  réduction par utilisation de la règle 37 (Type)


État 7

    3 MainFunction: tMAIN tPARO tPARF . BodyFunction

    tACCO  décalage et aller à l'état 11

    BodyFunction  aller à l'état 12


État 8

    2 MainFunction: tMAIN tPARO Args . tPARF BodyFunction

    tPARF  décalage et aller à l'état 13


État 9

   34 Args: Arg . tVIRGULE Args
   35     | Arg .

    tVIRGULE  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 35 (Args)


État 10

   36 Arg: Type . ListIDs

    tID  décalage et aller à l'état 15

    ListIDs  aller à l'état 16


État 11

    5 BodyFunction: tACCO . $@1 InBody tACCF

    $défaut  réduction par utilisation de la règle 4 ($@1)

    $@1  aller à l'état 17


État 12

    3 MainFunction: tMAIN tPARO tPARF BodyFunction .

    $défaut  réduction par utilisation de la règle 3 (MainFunction)


État 13

    2 MainFunction: tMAIN tPARO Args tPARF . BodyFunction

    tACCO  décalage et aller à l'état 11

    BodyFunction  aller à l'état 18


État 14

   34 Args: Arg tVIRGULE . Args

    tINT  décalage et aller à l'état 6

    Args  aller à l'état 19
    Arg   aller à l'état 9
    Type  aller à l'état 10


État 15

   32 ListIDs: tID . tVIRGULE ListIDs
   33        | tID .

    tVIRGULE  décalage et aller à l'état 20

    tVIRGULE  [réduction par utilisation de la règle 33 (ListIDs)]
    $défaut  réduction par utilisation de la règle 33 (ListIDs)


État 16

   36 Arg: Type ListIDs .

    $défaut  réduction par utilisation de la règle 36 (Arg)


État 17

    5 BodyFunction: tACCO $@1 . InBody tACCF

    tCONST   décalage et aller à l'état 21
    tINT     décalage et aller à l'état 6
    tPRINTF  décalage et aller à l'état 22
    tIF      décalage et aller à l'état 23
    tWHILE   décalage et aller à l'état 24
    tID      décalage et aller à l'état 25

    InBody        aller à l'état 26
    Declarations  aller à l'état 27
    Declaration   aller à l'état 28
    Constante     aller à l'état 29
    Affectation   aller à l'état 30
    Instructions  aller à l'état 31
    Instruction   aller à l'état 32
    Print         aller à l'état 33
    Type          aller à l'état 34
    If            aller à l'état 35
    IfElse        aller à l'état 36
    While         aller à l'état 37


État 18

    2 MainFunction: tMAIN tPARO Args tPARF BodyFunction .

    $défaut  réduction par utilisation de la règle 2 (MainFunction)


État 19

   34 Args: Arg tVIRGULE Args .

    $défaut  réduction par utilisation de la règle 34 (Args)


État 20

   32 ListIDs: tID tVIRGULE . ListIDs

    tID  décalage et aller à l'état 15

    ListIDs  aller à l'état 38


État 21

   19 Constante: tCONST . Type ListConstDecs tPV

    tINT  décalage et aller à l'état 6

    Type  aller à l'état 39


État 22

   31 Print: tPRINTF . tPARO tID $@3 tPARF tPV

    tPARO  décalage et aller à l'état 40


État 23

   50 If: tIF . tPARO Exp tPARF

    tPARO  décalage et aller à l'état 41


État 24

   56 While: tWHILE . $@5 tPARO Exp tPARF $@6 Body

    $défaut  réduction par utilisation de la règle 54 ($@5)

    $@5  aller à l'état 42


État 25

   23 Affectation: tID . tEQU Exp tPV

    tEQU  décalage et aller à l'état 43


État 26

    5 BodyFunction: tACCO $@1 InBody . tACCF

    tACCF  décalage et aller à l'état 44


État 27

    8 InBody: Declarations . Instructions
    9       | Declarations .

    tPRINTF  décalage et aller à l'état 22
    tIF      décalage et aller à l'état 23
    tWHILE   décalage et aller à l'état 24
    tID      décalage et aller à l'état 25

    $défaut  réduction par utilisation de la règle 9 (InBody)

    Affectation   aller à l'état 30
    Instructions  aller à l'état 45
    Instruction   aller à l'état 32
    Print         aller à l'état 33
    If            aller à l'état 35
    IfElse        aller à l'état 36
    While         aller à l'état 37


État 28

   11 Declarations: Declaration . Declarations
   12             | Declaration .

    tCONST  décalage et aller à l'état 21
    tINT    décalage et aller à l'état 6

    $défaut  réduction par utilisation de la règle 12 (Declarations)

    Declarations  aller à l'état 46
    Declaration   aller à l'état 28
    Constante     aller à l'état 29
    Type          aller à l'état 34


État 29

   14 Declaration: Constante .

    $défaut  réduction par utilisation de la règle 14 (Declaration)


État 30

   26 Instruction: Affectation .

    $défaut  réduction par utilisation de la règle 26 (Instruction)


État 31

   10 InBody: Instructions .

    $défaut  réduction par utilisation de la règle 10 (InBody)


État 32

   24 Instructions: Instruction . Instructions
   25             | Instruction .

    tPRINTF  décalage et aller à l'état 22
    tIF      décalage et aller à l'état 23
    tWHILE   décalage et aller à l'état 24
    tID      décalage et aller à l'état 25

    $défaut  réduction par utilisation de la règle 25 (Instructions)

    Affectation   aller à l'état 30
    Instructions  aller à l'état 47
    Instruction   aller à l'état 32
    Print         aller à l'état 33
    If            aller à l'état 35
    IfElse        aller à l'état 36
    While         aller à l'état 37


État 33

   27 Instruction: Print .

    $défaut  réduction par utilisation de la règle 27 (Instruction)


État 34

   13 Declaration: Type . ListDecs tPV

    tID  décalage et aller à l'état 48

    ListDecs  aller à l'état 49
    ListDec   aller à l'état 50


État 35

   51 IfElse: If .
   53       | If . tELSE $@4 Body

    tELSE  décalage et aller à l'état 51

    $défaut  réduction par utilisation de la règle 51 (IfElse)


État 36

   28 Instruction: IfElse .

    $défaut  réduction par utilisation de la règle 28 (Instruction)


État 37

   29 Instruction: While .

    $défaut  réduction par utilisation de la règle 29 (Instruction)


État 38

   32 ListIDs: tID tVIRGULE ListIDs .

    $défaut  réduction par utilisation de la règle 32 (ListIDs)


État 39

   19 Constante: tCONST Type . ListConstDecs tPV

    tID  décalage et aller à l'état 52

    ListConstDecs  aller à l'état 53
    ListConstDec   aller à l'état 54


État 40

   31 Print: tPRINTF tPARO . tID $@3 tPARF tPV

    tID  décalage et aller à l'état 55


État 41

   50 If: tIF tPARO . Exp tPARF

    tPARO  décalage et aller à l'état 56
    tNB    décalage et aller à l'état 57
    tID    décalage et aller à l'état 58

    Exp  aller à l'état 59


État 42

   56 While: tWHILE $@5 . tPARO Exp tPARF $@6 Body

    tPARO  décalage et aller à l'état 60


État 43

   23 Affectation: tID tEQU . Exp tPV

    tPARO  décalage et aller à l'état 56
    tNB    décalage et aller à l'état 57
    tID    décalage et aller à l'état 58

    Exp  aller à l'état 61


État 44

    5 BodyFunction: tACCO $@1 InBody tACCF .

    $défaut  réduction par utilisation de la règle 5 (BodyFunction)


État 45

    8 InBody: Declarations Instructions .

    $défaut  réduction par utilisation de la règle 8 (InBody)


État 46

   11 Declarations: Declaration Declarations .

    $défaut  réduction par utilisation de la règle 11 (Declarations)


État 47

   24 Instructions: Instruction Instructions .

    $défaut  réduction par utilisation de la règle 24 (Instructions)


État 48

   17 ListDec: tID . tEQU Exp
   18        | tID .

    tEQU  décalage et aller à l'état 62

    $défaut  réduction par utilisation de la règle 18 (ListDec)


État 49

   13 Declaration: Type ListDecs . tPV

    tPV  décalage et aller à l'état 63


État 50

   15 ListDecs: ListDec . tVIRGULE ListDecs
   16         | ListDec .

    tVIRGULE  décalage et aller à l'état 64

    $défaut  réduction par utilisation de la règle 16 (ListDecs)


État 51

   53 IfElse: If tELSE . $@4 Body

    $défaut  réduction par utilisation de la règle 52 ($@4)

    $@4  aller à l'état 65


État 52

   22 ListConstDec: tID . tEQU Exp

    tEQU  décalage et aller à l'état 66


État 53

   19 Constante: tCONST Type ListConstDecs . tPV

    tPV  décalage et aller à l'état 67


État 54

   20 ListConstDecs: ListConstDec . tVIRGULE ListConstDecs
   21              | ListConstDec .

    tVIRGULE  décalage et aller à l'état 68

    $défaut  réduction par utilisation de la règle 21 (ListConstDecs)


État 55

   31 Print: tPRINTF tPARO tID . $@3 tPARF tPV

    $défaut  réduction par utilisation de la règle 30 ($@3)

    $@3  aller à l'état 69


État 56

   49 Exp: tPARO . Exp tPARF

    tPARO  décalage et aller à l'état 56
    tNB    décalage et aller à l'état 57
    tID    décalage et aller à l'état 58

    Exp  aller à l'état 70


État 57

   47 Exp: tNB .

    $défaut  réduction par utilisation de la règle 47 (Exp)


État 58

   48 Exp: tID .

    $défaut  réduction par utilisation de la règle 48 (Exp)


État 59

   38 Exp: Exp . tPLUS Exp
   39    | Exp . tMINUS Exp
   40    | Exp . tDIV Exp
   41    | Exp . tMUL Exp
   42    | Exp . tCOMP Exp
   43    | Exp . tINF Exp
   44    | Exp . tSUP Exp
   45    | Exp . tINFE Exp
   46    | Exp . tSUPE Exp
   50 If: tIF tPARO Exp . tPARF

    tMUL    décalage et aller à l'état 71
    tPLUS   décalage et aller à l'état 72
    tMINUS  décalage et aller à l'état 73
    tDIV    décalage et aller à l'état 74
    tCOMP   décalage et aller à l'état 75
    tINF    décalage et aller à l'état 76
    tSUP    décalage et aller à l'état 77
    tINFE   décalage et aller à l'état 78
    tSUPE   décalage et aller à l'état 79
    tPARF   décalage et aller à l'état 80


État 60

   56 While: tWHILE $@5 tPARO . Exp tPARF $@6 Body

    tPARO  décalage et aller à l'état 56
    tNB    décalage et aller à l'état 57
    tID    décalage et aller à l'état 58

    Exp  aller à l'état 81


État 61

   23 Affectation: tID tEQU Exp . tPV
   38 Exp: Exp . tPLUS Exp
   39    | Exp . tMINUS Exp
   40    | Exp . tDIV Exp
   41    | Exp . tMUL Exp
   42    | Exp . tCOMP Exp
   43    | Exp . tINF Exp
   44    | Exp . tSUP Exp
   45    | Exp . tINFE Exp
   46    | Exp . tSUPE Exp

    tMUL    décalage et aller à l'état 71
    tPLUS   décalage et aller à l'état 72
    tMINUS  décalage et aller à l'état 73
    tDIV    décalage et aller à l'état 74
    tCOMP   décalage et aller à l'état 75
    tINF    décalage et aller à l'état 76
    tSUP    décalage et aller à l'état 77
    tINFE   décalage et aller à l'état 78
    tSUPE   décalage et aller à l'état 79
    tPV     décalage et aller à l'état 82


État 62

   17 ListDec: tID tEQU . Exp

    tPARO  décalage et aller à l'état 56
    tNB    décalage et aller à l'état 57
    tID    décalage et aller à l'état 58

    Exp  aller à l'état 83


État 63

   13 Declaration: Type ListDecs tPV .

    $défaut  réduction par utilisation de la règle 13 (Declaration)


État 64

   15 ListDecs: ListDec tVIRGULE . ListDecs

    tID  décalage et aller à l'état 48

    ListDecs  aller à l'état 84
    ListDec   aller à l'état 50


État 65

   53 IfElse: If tELSE $@4 . Body

    tACCO  décalage et aller à l'état 85

    Body  aller à l'état 86


État 66

   22 ListConstDec: tID tEQU . Exp

    tPARO  décalage et aller à l'état 56
    tNB    décalage et aller à l'état 57
    tID    décalage et aller à l'état 58

    Exp  aller à l'état 87


État 67

   19 Constante: tCONST Type ListConstDecs tPV .

    $défaut  réduction par utilisation de la règle 19 (Constante)


État 68

   20 ListConstDecs: ListConstDec tVIRGULE . ListConstDecs

    tID  décalage et aller à l'état 52

    ListConstDecs  aller à l'état 88
    ListConstDec   aller à l'état 54


État 69

   31 Print: tPRINTF tPARO tID $@3 . tPARF tPV

    tPARF  décalage et aller à l'état 89


État 70

   38 Exp: Exp . tPLUS Exp
   39    | Exp . tMINUS Exp
   40    | Exp . tDIV Exp
   41    | Exp . tMUL Exp
   42    | Exp . tCOMP Exp
   43    | Exp . tINF Exp
   44    | Exp . tSUP Exp
   45    | Exp . tINFE Exp
   46    | Exp . tSUPE Exp
   49    | tPARO Exp . tPARF

    tMUL    décalage et aller à l'état 71
    tPLUS   décalage et aller à l'état 72
    tMINUS  décalage et aller à l'état 73
    tDIV    décalage et aller à l'état 74
    tCOMP   décalage et aller à l'état 75
    tINF    décalage et aller à l'état 76
    tSUP    décalage et aller à l'état 77
    tINFE   décalage et aller à l'état 78
    tSUPE   décalage et aller à l'état 79
    tPARF   décalage et aller à l'état 90


État 71

   41 Exp: Exp tMUL . Exp

    tPARO  décalage et aller à l'état 56
    tNB    décalage et aller à l'état 57
    tID    décalage et aller à l'état 58

    Exp  aller à l'état 91


État 72

   38 Exp: Exp tPLUS . Exp

    tPARO  décalage et aller à l'état 56
    tNB    décalage et aller à l'état 57
    tID    décalage et aller à l'état 58

    Exp  aller à l'état 92


État 73

   39 Exp: Exp tMINUS . Exp

    tPARO  décalage et aller à l'état 56
    tNB    décalage et aller à l'état 57
    tID    décalage et aller à l'état 58

    Exp  aller à l'état 93


État 74

   40 Exp: Exp tDIV . Exp

    tPARO  décalage et aller à l'état 56
    tNB    décalage et aller à l'état 57
    tID    décalage et aller à l'état 58

    Exp  aller à l'état 94


État 75

   42 Exp: Exp tCOMP . Exp

    tPARO  décalage et aller à l'état 56
    tNB    décalage et aller à l'état 57
    tID    décalage et aller à l'état 58

    Exp  aller à l'état 95


État 76

   43 Exp: Exp tINF . Exp

    tPARO  décalage et aller à l'état 56
    tNB    décalage et aller à l'état 57
    tID    décalage et aller à l'état 58

    Exp  aller à l'état 96


État 77

   44 Exp: Exp tSUP . Exp

    tPARO  décalage et aller à l'état 56
    tNB    décalage et aller à l'état 57
    tID    décalage et aller à l'état 58

    Exp  aller à l'état 97


État 78

   45 Exp: Exp tINFE . Exp

    tPARO  décalage et aller à l'état 56
    tNB    décalage et aller à l'état 57
    tID    décalage et aller à l'état 58

    Exp  aller à l'état 98


État 79

   46 Exp: Exp tSUPE . Exp

    tPARO  décalage et aller à l'état 56
    tNB    décalage et aller à l'état 57
    tID    décalage et aller à l'état 58

    Exp  aller à l'état 99


État 80

   50 If: tIF tPARO Exp tPARF .

    $défaut  réduction par utilisation de la règle 50 (If)


État 81

   38 Exp: Exp . tPLUS Exp
   39    | Exp . tMINUS Exp
   40    | Exp . tDIV Exp
   41    | Exp . tMUL Exp
   42    | Exp . tCOMP Exp
   43    | Exp . tINF Exp
   44    | Exp . tSUP Exp
   45    | Exp . tINFE Exp
   46    | Exp . tSUPE Exp
   56 While: tWHILE $@5 tPARO Exp . tPARF $@6 Body

    tMUL    décalage et aller à l'état 71
    tPLUS   décalage et aller à l'état 72
    tMINUS  décalage et aller à l'état 73
    tDIV    décalage et aller à l'état 74
    tCOMP   décalage et aller à l'état 75
    tINF    décalage et aller à l'état 76
    tSUP    décalage et aller à l'état 77
    tINFE   décalage et aller à l'état 78
    tSUPE   décalage et aller à l'état 79
    tPARF   décalage et aller à l'état 100


État 82

   23 Affectation: tID tEQU Exp tPV .

    $défaut  réduction par utilisation de la règle 23 (Affectation)


État 83

   17 ListDec: tID tEQU Exp .
   38 Exp: Exp . tPLUS Exp
   39    | Exp . tMINUS Exp
   40    | Exp . tDIV Exp
   41    | Exp . tMUL Exp
   42    | Exp . tCOMP Exp
   43    | Exp . tINF Exp
   44    | Exp . tSUP Exp
   45    | Exp . tINFE Exp
   46    | Exp . tSUPE Exp

    tMUL    décalage et aller à l'état 71
    tPLUS   décalage et aller à l'état 72
    tMINUS  décalage et aller à l'état 73
    tDIV    décalage et aller à l'état 74
    tCOMP   décalage et aller à l'état 75
    tINF    décalage et aller à l'état 76
    tSUP    décalage et aller à l'état 77
    tINFE   décalage et aller à l'état 78
    tSUPE   décalage et aller à l'état 79

    $défaut  réduction par utilisation de la règle 17 (ListDec)

